# jellyfin-plugin-ass-fonts-auto-embedding

./: .gitignore  .gitmodules  Jellyfin.Plugin.AssFontsAutoEmbedding.sln  NOTICE  README.md  build.yaml  manifest.json
.github/scripts/: prepare-manifest-branch.sh
.github/workflows/: publish-snapshot.yml  publish.yml
assfonts-build/: CMakeLists.txt  build.sh  vcpkg.json
src/Jellyfin.Plugin.AssFontsAutoEmbedding/: Jellyfin.Plugin.AssFontsAutoEmbedding.csproj  Plugin.cs
src/Jellyfin.Plugin.AssFontsAutoEmbedding/Configuration/: NativeLogVerbosity.cs  PluginConfiguration.cs
src/Jellyfin.Plugin.AssFontsAutoEmbedding/Interop/: AssfontsLogLevel.cs  AssfontsNativeBindings.cs  NativeStringArrayMarshaller.cs
src/Jellyfin.Plugin.AssFontsAutoEmbedding/Native/: AssfontsNativeEngine.cs  AssfontsOperationResult.cs  IAssfontsEngine.cs  NativeLibraryLoader.cs
src/Jellyfin.Plugin.AssFontsAutoEmbedding/Services/: AttachmentFontService.cs  ConfigurationChangeHostedService.cs  DecorationLoggingHostedService.cs  FontDbBuildCoordinator.cs  FontDbBuildService.cs  FontDbFingerprintService.cs  NativeOperationCoordinator.cs  NativeSelfCheckService.cs  PluginContext.cs  PluginPaths.cs  PluginRuntimeState.cs  PluginServiceRegistrator.cs  RewriteCache.cs  RewriteCacheEntry.cs  RewriteCacheKey.cs  RewriteCacheKeyFactory.cs  RewriteEligibilityResult.cs  RewriteRequest.cs  RewriteResult.cs  RewriteService.cs  RewriteWorkCoordinator.cs  SelfCheckedSubtitleEncoder.cs  ServiceCollectionDecorationExtensions.cs  SubtitleEncoderDecoration.cs  SubtitleEncoderDecorationRegistrationReport.cs  SubtitleEncoderDecoratorProbe.cs  SubtitleEncoderWrapper.cs
src/Jellyfin.Plugin.AssFontsAutoEmbedding/State/: FontDbState.cs  FontDbStateManager.cs
src/Jellyfin.Plugin.AssFontsAutoEmbedding/Tasks/: PruneRewriteCacheTask.cs  RebuildFontDbTask.cs
src/Jellyfin.Plugin.AssFontsAutoEmbedding/Validation/: ManagedCoordinationValidation.cs  NativeSmokeValidation.cs  ValidationEntryPoint.cs  ValidationProgram.cs
src/Jellyfin.Plugin.AssFontsAutoEmbedding/Web/: configPage.html
